{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 60,
  "lineage": "c64abf16-67ee-4890-b4b1-a849f7b4bb9c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b47105e3d7fc023e",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0ce1ee27d8b719939",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce1ee27d8b719939",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "eng130-new",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-064b5dfcfe677b91a",
            "private_dns": "ip-10-0-2-18.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.18",
            "public_ip": "52.213.207.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-099133273968bc296",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b4c14e19d23c68a",
            "tags": {
              "Name": "eng130-abdellah-terraform-app"
            },
            "tags_all": {
              "Name": "eng130-abdellah-terraform-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d5d9b3c071feabc"
            ]
          },
          "dependencies": [
            "aws_security_group.eng130-abdellah-terraform-sg",
            "aws_subnet.eng130_abdellah_subnet_public",
            "aws_vpc.eng130_abdellah_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eng130_abdellah_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:internet-gateway/igw-07d372283cbe06067",
            "id": "igw-07d372283cbe06067",
            "owner_id": "135928476890",
            "tags": {
              "Name": "eng130_abdellah_igw"
            },
            "tags_all": {
              "Name": "eng130_abdellah_igw"
            },
            "vpc_id": "vpc-010d6056a3d9e68b5"
          },
          "dependencies": [
            "aws_vpc.eng130_abdellah_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eng130_abdellah_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:route-table/rtb-083739083b5538b5d",
            "id": "rtb-083739083b5538b5d",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d372283cbe06067",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eng130_abdellah_rt"
            },
            "tags_all": {
              "Name": "eng130_abdellah_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-010d6056a3d9e68b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.eng130_abdellah_igw",
            "aws_vpc.eng130_abdellah_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eng130_aneese_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0338953d9286c2425",
            "route_table_id": "rtb-083739083b5538b5d",
            "subnet_id": "subnet-06b4c14e19d23c68a"
          },
          "dependencies": [
            "aws_internet_gateway.eng130_abdellah_igw",
            "aws_route_table.eng130_abdellah_rt",
            "aws_subnet.eng130_abdellah_subnet_public",
            "aws_vpc.eng130_abdellah_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eng130-abdellah-terraform-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-06d5d9b3c071feabc",
            "description": "eng130-abdellah-terraform-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d5d9b3c071feabc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "eng130-abdellah-terraform-sg",
            "name_prefix": "",
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow tls"
            },
            "tags_all": {
              "Name": "allow tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-010d6056a3d9e68b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eng130_abdellah_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eng130_abdellah_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-06b4c14e19d23c68a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b4c14e19d23c68a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "135928476890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eng130_abdellah_subnet_public"
            },
            "tags_all": {
              "Name": "eng130_abdellah_subnet_public"
            },
            "vpc_id": "vpc-010d6056a3d9e68b5"
          },
          "dependencies": [
            "aws_vpc.eng130_abdellah_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eng130_abdellah_terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-010d6056a3d9e68b5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-085673952172a91d0",
            "default_route_table_id": "rtb-02ddae1be88c9ec2d",
            "default_security_group_id": "sg-0553059c21172f5f3",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-010d6056a3d9e68b5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02ddae1be88c9ec2d",
            "owner_id": "135928476890",
            "tags": {
              "Name": "eng130_abdellah_vpc_terraform"
            },
            "tags_all": {
              "Name": "eng130_abdellah_vpc_terraform"
            }
          }
        }
      ]
    }
  ]
}